--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+Pisco:
+  name: Pisco
+  title: Frontend engineer
+  url: https://github.com/Piscoo
+  image_url: https://raw.githubusercontent.com/Piscoo/wallpaper/main/DBzk5JdU0AAbn52.jpg
